--- a/web_scrabing.ipynb
+++ b/web_scrabing.ipynb
@@ -1,9 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "- ### import BeautifulSoup , html5lib and requests\n",
+    "they are needed to perform the webscraping \n",
+    "- ### set the headers which is the browser user agent and the url for the website you want to scrape from\n",
+    "The User-Agent (UA) string is contained in the HTTP headers and is intended to identify devices requesting online content."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,9 +33,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Now we will get the html content of the web page "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4601,9 +4634,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "![](../../Kaggle/football%20market%20transfer/table.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the needed table that we want to scrape.Using find method we can extract this table out of the whole page by determining the class of the table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5551,9 +5606,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Players Names "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5599,9 +5665,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Players Ages and Nationalities\n",
+    "some players have more than one nationality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5631,9 +5709,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Players Positions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5654,9 +5743,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clubs Information\n",
+    "- It was little bit harder as some playes weren't assigned by a club (there contracts ended with their clubs ) so the data wasn't well organized \n",
+    "- I got the club transfered from and the country he was playing at also the club transfered to and its country "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "IndexError",
@@ -5672,11 +5774,9 @@
    ],
    "source": [
     "from_club=[]\n",
-    "from_league=[]\n",
     "from_country=[]\n",
     "\n",
     "to_club=[]\n",
-    "to_league=[]\n",
     "to_country=[]\n",
     "\n",
     "info=table.find_all('table',attrs={'class':'inline-table'})\n",
@@ -5705,16 +5805,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### The Market value of the player and the transfer fee\n",
+    "The market value is the price estimated of the player while the transfer fee is the real cost of the transfer"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5740,7 +5845,11 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5755,9 +5864,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the DataFrame Using Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
