--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -1013,7 +1013,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Players Names "
    ]
@@ -1072,7 +1076,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Players Ages and Nationalities\n",
     "some players have more than one nationality"
@@ -1116,7 +1124,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Players Positions"
    ]
@@ -1150,7 +1162,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Clubs Information\n",
     "- It was little bit harder as some playes weren't assigned by a club (there contracts ended with their clubs ) so the data wasn't well organized \n",
@@ -1222,7 +1238,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### The Market value of the player and the transfer fee\n",
     "The market value is the price estimated of the player while the transfer fee is the real cost of the transfer"
@@ -1281,7 +1301,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Create the DataFrame Using Pandas"
    ]
